Added more file path checking, simplified returning contents of files.